--- a/src/main/webapp/ReceptenToevoegen.html
+++ b/src/main/webapp/ReceptenToevoegen.html
@@ -11,7 +11,7 @@
 <body>
 <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="Recepten.html">Reizen</a></li>
+    <li><a href="Recepten.html">Recepten</a></li>
     <li><a href="IngredientNaarRecept.html">Ingredient Naar Recept</a></li>
 </ul>
 <div class="formContainer">
@@ -44,7 +44,13 @@
     </div>
 </div>
 
+<script src="./ReceptenToevoegen.js"> </script>
+
+<footer>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUQaB5AfW9Oa?utm_source=generator" width="50%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+</footer>
 
 </body>
+
 
 </html>
